(style) Contact form no longer expands into footer (#69)
* add procfile

* update postinstall

* change server

* add favicon

* add process.env keys

* remove private.js module

* add procfile

* update postinstall

* change server

* add procfile

* add procfile

* update postinstall

* update postinstall

* change server

* change server

* add favicon

* add favicon

* add favicon

* (style) Remove extra space on line 8

* (style) Contact form no longer expands into footer

--- a/client/styles.css
+++ b/client/styles.css
@@ -8,6 +8,10 @@
   height: 530px;
 }
 
+#contact-content {
+  padding: 0px 192px 0px 192px;
+}
+
 #balloons-content,
 #flowers-content {
   padding: 0px 100px 0px 100px;
